<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:id="@+id/editTextTextPersonName7" tools:layout_editor_absoluteY="166dp"
            tools:layout_editor_absoluteX="25dp" android:textColor="#4CAF50" tools:ignore="MissingConstraints"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/prompt_password"
            android:ems="10"
            android:id="@+id/editTextTextPersonName10" tools:layout_editor_absoluteY="398dp"
            tools:layout_editor_absoluteX="25dp" tools:ignore="MissingConstraints" android:textColor="#4CAF50"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Last Name"
            android:ems="10"
            android:id="@+id/editTextTextPersonName8" tools:layout_editor_absoluteY="244dp"
            tools:layout_editor_absoluteX="25dp" android:textColor="#4CAF50" tools:ignore="MissingConstraints"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/enter_username"
            android:ems="10"
            android:id="@+id/editTextTextPersonName9" tools:layout_editor_absoluteY="320dp"
            tools:layout_editor_absoluteX="25dp" android:textColor="#4CAF50" tools:ignore="MissingConstraints"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3" tools:layout_editor_absoluteY="501dp"
            tools:layout_editor_absoluteX="25dp" tools:ignore="MissingConstraints"/>
    <Button
            android:text="Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4" tools:layout_editor_absoluteY="501dp"
            tools:layout_editor_absoluteX="285dp" tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10" tools:layout_editor_absoluteY="36dp"
            tools:layout_editor_absoluteX="103dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/SAMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11" tools:layout_editor_absoluteY="82dp"
            tools:layout_editor_absoluteX="144dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#03A9F4" tools:ignore="MissingConstraints"/>
</androidx.constraintlayout.widget.ConstraintLayout>